--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link data-react-helmet="true" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:500,700|display=swap&amp;subset=japanese"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
